--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
   <header class="site-header">
     <div class="wrapper">
       <div class="site-header__logo">
-        <div class="site-header__logo__graphic icon icon--clear-view-escapes">Clear view escapes</div>
+        <div class="site-header__logo__graphic icon icon--clear-view-escapes">Clear View Escapes</div>
       </div>
 
       <div class="site-header__menu-icon"></div>
@@ -168,5 +168,6 @@
       <p><span class="site-footer__text">Copyright &copy; 2016 Clear View Escapes. All rights reserved.</span> <a href="#" class="btn btn--orange">Get in Touch</a></p>
     </div>
   </footer>
+  <script src="/temp/scripts/App.js"></script>
 </body>
 </html>
